--- a/views/public/monitoring-service.ejs
+++ b/views/public/monitoring-service.ejs
@@ -18,7 +18,7 @@
                                     <p>Detailed monthly reports</p>
                                     <p><sup>$</sup>150<sup>*</sup></p>
                                     <p>per year</p>
-                                    <a class="btn btn-primary" href="/pay/aex5">Get Started</a>
+                                    <a class="btn btn-primary" href="/trademark-monitoring-in-united_states-proceed">Get Started</a>
                                     <!-- <a href="/monitoring" class="btn btn-primary">Get Started</a> -->
                                 </td>
                             </tr>
