--- a/views/order/registration.ejs
+++ b/views/order/registration.ejs
@@ -24,6 +24,7 @@ let serviceTypeCamel = serviceType.charAt(0).toUpperCase() + serviceType.slice(1
 			<form id="filing_form" method="POST" action="/trademark-profile" enctype="multipart/form-data">
 				<div id="errorMessage" class="alert alert-danger" role="alert" style="display:none"></div>
 
+				<% if( serviceType != "monitoring" ) { %>
 				<div class="form-group row">
 					<div class="col-md-12">
 						<div class="form-box">
@@ -59,6 +60,7 @@ Combined Mark: one trademark, which contains verbal elements as well as design e
 						</div>
 					</div>
 				</div>
+				<% } %>
 
 
 				<div class="form-group row" id="word">
@@ -72,6 +74,20 @@ Combined Mark: one trademark, which contains verbal elements as well as design e
 					</div>
 				</div>
 
+				<% if( serviceType == "monitoring" ) { %>
+					<div class="form-group row" id="word">
+						<div class="col-md-12">
+						<div class="form-box">
+							<div class="form-check">
+								<label class="form-box-container" for="word_mark"><b>Trademark Serial</b></label>
+								<input type="text" name="serialNumber" class="form-control" id="serialNumber" placeholder="Enter serial number" value="" required autofocus>
+							</div>
+						</div>
+						</div>
+					</div>
+				<% } %>
+
+				<% if( serviceType != "monitoring" ) { %>
 				<div class="form-group row" id="upload" style="display:none">
 				
 					<div class="col-md-12">
@@ -108,6 +124,8 @@ Combined Mark: one trademark, which contains verbal elements as well as design e
 					</div>
 				
 				</div>
+
+				<% } %>
 
 
 				<!-- display class -->
@@ -178,6 +196,8 @@ We provide a helpful Class Search tool, which allows you to easily determine the
 					</div></div>
 
 				</div>
+
+				<% if( serviceType != "monitoring" ) { %>
 				
 				<% if(country.abbr == 'US') { %>
 				<div class="form-group row">
@@ -300,6 +320,8 @@ We provide a helpful Class Search tool, which allows you to easily determine the
 					</div>
 					
 				</div>
+
+				<% } %>
 
 				
 
