--- a/views/order/cart.ejs
+++ b/views/order/cart.ejs
@@ -17,11 +17,11 @@
 				</tr>
 				<% for(let i=0; i < cartItems.length; i++) { %>
 					<tr>
-						<th><%= cartItems[i].country.name %></th>
-						<th><%= cartItems[i].serviceType %></th>
-						<th><%= cartItems[i].type %></th>
-						<th><%= cartItems[i].word_mark %></th>
-						<th><%= cartItems[i].class %></th>
+						<th><%= cartItems[i].country.name ? cartItems[i].country.name : cartItems[i].country %></th>
+						<th><%= cartItems[i].serviceType ? cartItems[i].serviceType : '' %></th>
+						<th><%= cartItems[i].type ? cartItems[i].type : '' %></th>
+						<th><%= cartItems[i].word_mark ? cartItems[i].word_mark : '' %></th>
+						<th><%= cartItems[i].class ? cartItems[i].class : '' %></th>
 						<th><%= formatter.format(cartItems[i].price) %></th>
 						<th><span class="removeCartItem" data-id="<%= cartItems[i]._id %>"><i class="fa fa-trash"></i></span></th>
 
