--- a/views/public/countries.ejs
+++ b/views/public/countries.ejs
@@ -14,11 +14,15 @@
                     <div class="row">
 
                         <% for ( var ckey in continents[key].countries ) { if( continents[key].countries[ckey].name ) { %>
-                        <div class="col-md-4">
-                            <a href="/trademark-registration-in-<%= continents[key].countries[ckey].name.replace(/\s/g, '_').toLowerCase() %>" >
-                                <% if( continents[key].countries[ckey].avatar && continents[key].countries[ckey].avatar != "Test") { %><img src="images/<%= continents[key].countries[ckey].avatar %>"><% } %><%= continents[key].countries[ckey].name %>
-                            </a>
-                        </div>
+                            <% if( continents[key].countries[ckey].avatar && continents[key].countries[ckey].avatar != "Test") { %>
+                            <div class="col-md-4">
+                                <a href="/trademark-registration-in-<%= continents[key].countries[ckey].name.replace(/\s/g, '_').toLowerCase() %>" >
+                                    
+                                        <img src="images/<%= continents[key].countries[ckey].avatar %>">
+                                    <%= continents[key].countries[ckey].name %>
+                                </a>
+                            </div>
+                            <% } %>
                         <% } } %>
 
                     </div>
