--- a/email-templates/orderAdminNotification.ejs
+++ b/email-templates/orderAdminNotification.ejs
@@ -264,6 +264,25 @@
 		td .es-button-border-6:hover{
 			background:#1475a9!important;
 		}
+
+    .tbl-content-orders{
+	border-collapse: collapse;
+	width: 100%;
+  margin-top: 20px;
+}
+.tbl-content-orders td{
+	border: 1px solid black;
+	padding: 5px;
+}
+.tbl-content-orders td{
+	font-size : 14px;
+}
+.tbl-content-orders th{
+	font-size : 14px;
+  padding: 5px;
+  background: #dcdcdc;
+  border: 1px solid;
+}
 </style></head> 
  <body style="width:100%;font-family:arial, 'helvetica neue', helvetica, sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;padding:0;Margin:0;"> 
   <div class="es-wrapper-color" style="background-color:#F6F6F6;"> 
@@ -344,28 +363,33 @@
 
                           Customer placed a new order.
 
-                          <table class="table">
-                            <tr>
-                              <th>Order Number</th>
-                              <% if(!order.custom) { %>
-                              <th>Serial Number</th>
-                              <th>Mark</th>
-                              <% } %>
-                              <th>Description</th>
-                              <th>Amount</th>
-                              <th>Customer</th>
-                            </tr>
-                            <tr>
-                              <td><%= order.orderNumber %></td>
-                              <% if(!order.custom) { %>
-                              <td><%= order.action.serialNumber %></td>
-                              <td><%= order.action.trademark.name %></td>
-                              <% } %>
-                              <td><%= order.charge.description %></td>
-                              <td>$<%= ( order.charge.amount / 100 ) %></td>
-                              <td><%= order.charge.receipt_email %></td>
-                            </tr>
-                          </table>
+                          <% if ( order.cartItems ) { %>
+                            <table border="0" cellpadding="0" cellspacing="0" height="100%" class="tbl-content-orders" >
+                              <tr>
+                                <th>Country</th>
+                                <th>Type</th>
+                                <th>Mark</th>
+                                <th>Price</th>
+                              </tr>
+                             
+                              <% order.cartItems.forEach(item => { %>
+                                <tr>
+                                  <td><%= item.country.name %></td>
+                                  <td><%= item.serviceType %></td>
+                                  <td><%= item.word_mark %></td>
+                                  <td>$<%= item.price %></td>
+                                </tr>
+                              <% }) %>
+                            </table>
+  
+                          <% } %>
+  
+                          <% if(!order.custom) { %>
+                            <p>Serial Number: <%= order.action.serialNumber %></p>
+                            <p>Mark: <%= order.action.trademark.name %></p>
+                          <% } %>
+
+                          
                           
                          </p></td> 
                         
