--- a/views/order/registrationLanding.ejs
+++ b/views/order/registrationLanding.ejs
@@ -1,3 +1,192 @@
+<% if ( country.name == "Australia" ) { %>
+	<div class="container">
+		<h1 class="h1-heading-v2"><span>Trademark <br>Registration in <%= country.name %></span></h1>
+		<p class="reg-text-head">The ownership of a trademark is not automatically granted merely by using it. Generally speaking, only by going through the legal process of registration can you ensure rights to your trademark.</p>
+		<p class="reg-text-head">Registering a trademark is not always a simple matter of submitting an application. Many jurisdictions do not make information readily available to the public and some do not provide reliable data online. Researching similarities to your trademark can be a complex task.</p>
+
+		<div class="row" style="padding-top:120px; padding-bottom: 20px;" >
+			<div class="col-md-12">
+				<p class="text-reg-title-v2 text-center">Trademarkers.com will process your trademark registration in <strong class="text-uppercase"><%= country.name %></strong> through the following steps</p>
+			</div>
+		</div>
+
+		<div class="row step-blockv2">
+			
+			<ul class="nav nav-tabs">
+				<li><a data-toggle="tab" class="active" href="#studyBlock"><span>Step</span><i>1</i> Trademark Comprehensive Study</a></li>
+				<li><a data-toggle="tab" href="#registerBlock"><span>Step</span><i>2</i> Trademark Registration Request</a></li>
+			</ul>
+
+			<div class="tab-content">
+				<div id="studyBlock" class="tab-pane fade in active show">
+					<div class="row cont-wrap">
+						<div class="col-md-6">
+						<p> Trademark search report with Attorney's analysis about registration probabilities. This report is optional but highly recommended.</p>
+	
+						<p> There are several reasons why you might want to begin the registration process with a study:</p>
+	
+						<ul class="theme-default">
+							<li> 
+								If there is a pre-existing claim to your trademark, it is best to know this before you have invested time and resources into an application
+							</li>
+	
+							<li> 
+								Trademark similarities can be ambiguous and are best evaluated by a legal professional
+							</li>
+	
+							<li> 
+								It is possible to accidentally infringe on someone else’s trademark if you are not aware of its existence
+							</li>
+	
+							<li> 
+								A trademark study provides a snapshot of potential brands in your target market
+							</li>
+						</ul>
+					</div>
+	
+					<div class="col-md-6">
+						<p> With representation in almost every major jurisdiction, TradeMarkers has up-to-date information on trademark application activities. Hence, we are able to offer the following services:</p>
+	
+						<ul class="theme-default">
+							<li> 
+								Full analysis of existing trademarks, including similarities in appearance, sound, connotation and commercial impression
+							</li>
+	
+							<li> 
+								Consultation on what to do if an existing similarity is found
+							</li>
+	
+							<li> 
+								Enquiry with local trademark offices, as necessary
+							</li>
+	
+							<li> 
+								Detailed reporting on the availability of relevant marks and recommendations for your application
+							</li>
+						</ul>
+	
+						<p> Start by or dering a search report with Attorney's analysis about registration probabilities. This report is optional but highly recommended.</p>
+	
+						<button class="btn btn-primary btn-pull-right" data-toggle="modal" data-target="#studyModal"> Start Study</button>
+
+					</div>
+
+
+				</div>
+				</div>
+				<div id="registerBlock" class="tab-pane fade">
+					<div class="row cont-wrap">
+						<div class="col-md-12">
+							<p> With a legally registered trademark, you gain several benefits:</p>
+							<ul class="theme-default">
+								<li> 
+									Potential copycats are deterred from infringing on your brand
+								</li>
+								<li> 
+									The ability of other brands to claim that you are infringing on their trademark is severely diminished
+								</li>
+							</ul>
+							<p> Our licensed Trademark Attorneys in <%= country.name %> will handle your trademark request, check all formalities, and then file with the <b><%= country.agency_name %></b> (<b><%= country.agency_short %></b>). You will receive confirmation of filing and a copy of the filing request. We will contact you immediately if any subsequent office actions require additional information, or if there are any opposition in <%= country.name %> against your application.</p>
+							<p> After the formal examination at the <%= country.agency_short %> the trademark will be published for opposition to allow third parties to oppose if they believe that the mark infringes on their brands.<% if(country.oppositionCustomText) { %> <b><%= country.opposition_period %></b> <% } else { %>The opposition period in <%= country.name %> is <b><%= country.opposition_period %></b> after publication.<% } %> You will receive status updates as soon as your mark is published, and any actions the <%= country.agency_short %> will take if oppositions are received.</p>
+							<p> If no oppositions arise and your trademark is formally approved, you can expect registration within <b><%= country.registration_period %></b>.</p>
+
+							<button class="btn btn-primary btn-pull-right" data-toggle="modal" data-target="#registrationModal"> Start Registration</button>
+						</div>
+					</div>
+
+				</div>
+				
+			</div>
+
+			
+
+		</div>
+
+
+		<div class="row no-gutters no-guttersv2">
+			<div class="col-md-12">
+				<h2 style="padding-top:30px">Pricing Table</h2>
+				<p class="text-right">
+					Prices are in U.S Dollars
+				</p>
+				<div class="tbl-blue-container">
+					<table class="table tbl-blue">
+						<thead>
+							<tr>
+								<td style="width:10%"></td>
+								<td style="width:30%"></td>
+								<td style="width:20%"> Classes</td>
+								<td style="width:20%"> Word Only</td>
+								<td style="width:20%"> Design Only or Combined Word and Design</td>
+							</tr>
+						</thead>
+						<tbody>
+						
+						<% prices.forEach(price => { %>
+
+						<% if( price['service_type'] == 'Study' || 
+							price['service_type'] == 'Registration' ||
+							price['service_type'] == 'Certificate' ) { %>
+						
+							<tr>
+								<td class="no-right gray text-center" rowspan="2"> 
+									<% if ( price['service_type']  == "Study" ) { %>
+										Step 1
+									<% } else if ( price['service_type']  == "Registration" ) { %>
+										Step 2
+									<% } else if ( price['service_type']  == "Certificate" ) { %>
+										Step 3
+									<% } %>
+								</td>
+								<td class="no-left" rowspan="2">
+									<% if ( price['service_type']  == "Study" ) { %>
+										Trademark<br>Comprehensive Study
+									<% } else if ( price['service_type']  == "Registration" ) { %>
+										Trademark<br>Registration Request
+									<% } else if ( price['service_type']  == "Certificate" ) { %>
+										Trademark<br>Certificate Request
+									<% } %>
+								</td>
+								<td class="gray"> 
+									First Class
+								</td>
+								<td> 
+									<%= ( price.initial_cost <= 0 ? 'Free' : price.initial_cost ) %>
+								</td>
+								<td> 
+									<%= ( price.logo_initial_cost <= 0 ? 'Free' : price.logo_initial_cost ) %>
+								</td>
+							</tr>
+							<tr>
+								<td class="gray"> 
+									Each Additional Class
+								</td>
+								<td> 
+									<%= (price.additional_cost <= 0 ? 'Free' : price.additional_cost) %>
+								</td>
+								<td> 
+									<%= (price.logo_additional_cost <= 0 ? 'Free' : price.logo_additional_cost ) %>
+								</td>
+							</tr>
+
+						
+						<% } %>
+
+						<% }); %>
+						</tbody>
+					</table>
+				</div>
+				<p style="font-size:24px;color:#000;font-weight:600;padding-top:30px;"> Note:</p>
+				<p> Prices include all official and professional fees. Prices do not include legal defenses in case of oppositions or objections</p>
+				<p> Timeframe of the trademark registration process is only an estimate and it may vary considerably if any objections and/or oppositions are presented, or other events occur during the trademark registration process.</p>
+
+			
+			</div>
+		</div>
+
+
+	</div> <!-- end container from v2 -->
+<% } else { %>
 <h1 class="h1-heading"><span>Trademark Registration in <%= country.name %></span></h1>
 <div class="container">
     <div class="row justify-content-center box-bg-container">
@@ -177,6 +366,8 @@
         </div>
     </div>
 </div>
+
+<% } %>
 
 <!-- MODAL STUDY -->
 <div class="modal fade" id="studyModal" tabindex="-1" role="dialog" aria-labelledby="studyModalLabel" aria-hidden="true">
