--- a/public/stylesheets/less/_content.less
+++ b/public/stylesheets/less/_content.less
@@ -227,10 +227,15 @@
 
 .bg-welcome.australia {
     background: url(/images/countries/bg-australia.jpg);
-    background-size: contain;
+    background-size: auto 100%;
     background-repeat: no-repeat;
     height: unset;
-    min-height: 560px;
+    min-height: 544px;
+    background-position: 10% top;
+
+    @media (max-width: 768px) {
+        background-position: 0% top;
+    }
 }
 
 .h1-heading-v2{
@@ -245,7 +250,7 @@
         color: #fff;
 
         @media (max-width: 768px){
-            font-size : 22px;
+            font-size : 33px;
         }
     }
 
@@ -254,6 +259,11 @@
     text-align: left;
     // padding-top: 20px;
     padding-bottom: 20px;
+
+    @media (max-width: 768px) {
+        padding-bottom: 264px;
+        // font-size : 33px;
+    }
 }
 
 .reg-text-head{
@@ -263,8 +273,33 @@
     text-shadow: 0 0 5px #000000;
     margin-bottom: 30px;
 
-    @media (min-width: 768px) {
-        max-width: 83%;
+    padding-left: 30%;
+    
+    @media (min-width: 1150px) {
+        padding-left: 20%;
+    }
+    @media (min-width: 1400px) {
+        padding-left: 15%;
+    }
+    @media (min-width: 1400px) {
+        padding-left: 9%;
+    }
+    @media (max-width: 768px) {
+        // max-width: 83%;
+        padding: 10px;
+        margin-bottom: 10px;
+        box-shadow: 0 0 5px black;
+        background: rgba(0,0,0,0.7);
+        border-radius: 7px;
+    }
+}
+
+.flag-text-block{
+    padding-top:120px; 
+    padding-bottom: 20px;
+
+    @media (max-width: 768px) {
+        padding-top:20px;
     }
 }
 
