--- a/views/order/registrationLanding.ejs
+++ b/views/order/registrationLanding.ejs
@@ -4,9 +4,13 @@
 		<p class="reg-text-head">The ownership of a trademark is not automatically granted merely by using it. Generally speaking, only by going through the legal process of registration can you ensure rights to your trademark.</p>
 		<p class="reg-text-head">Registering a trademark is not always a simple matter of submitting an application. Many jurisdictions do not make information readily available to the public and some do not provide reliable data online. Researching similarities to your trademark can be a complex task.</p>
 
-		<div class="row" style="padding-top:120px; padding-bottom: 20px;" >
-			<div class="col-md-12">
-				<p class="text-reg-title-v2 text-center">Trademarkers.com will process your trademark registration in <strong class="text-uppercase"><%= country.name %></strong> through the following steps</p>
+		<div class="row align-items-center flag-text-block" >
+			<div class="col-md-2">
+				<div class="flag-container" style="background-image:url('images/flag/<%= country.abbr.toLowerCase() %>.png')"></div>
+				<p class="text-center" style="font-size:24px;color: #000;padding-top:10px;margin-bottom:0px;"><%= country.abbr %></p>
+			</div>
+				<div class="col-md-10">
+				<p class="text-reg-title-v2 text-center" style="margin-bottom:0;">Trademarkers.com will process your trademark registration in <strong class="text-uppercase"><%= country.name %></strong> through the following steps</p>
 			</div>
 		</div>
 
