--- a/public/stylesheets/less/_content.less
+++ b/public/stylesheets/less/_content.less
@@ -225,8 +225,20 @@
     cursor: pointer;
 }
 
-.bg-welcome.australia {
-    background: url(/images/countries/bg-australia.jpg);
+// .bg-welcome.australia {
+//     background: url(/images/countries/bg-australia.jpg);
+//     background-size: auto 100%;
+//     background-repeat: no-repeat;
+//     height: unset;
+//     min-height: 544px;
+//     background-position: 10% top;
+
+//     @media (max-width: 768px) {
+//         background-position: 0% top;
+//     }
+// }
+
+.bg-welcome.showBannerBg{
     background-size: auto 100%;
     background-repeat: no-repeat;
     height: unset;
@@ -238,18 +250,31 @@
     }
 }
 
-.bg-welcome.canada {
-    background: url(/images/countries/bg-canada.jpg);
-    background-size: auto 100%;
-    background-repeat: no-repeat;
-    height: unset;
-    min-height: 544px;
-    background-position: 10% top;
+// .bg-welcome.canada {
+//     background: url(/images/countries/bg-canada.jpg);
+//     background-size: auto 100%;
+//     background-repeat: no-repeat;
+//     height: unset;
+//     min-height: 544px;
+//     background-position: 10% top;
 
-    @media (max-width: 768px) {
-        background-position: 0% top;
-    }
-}
+//     @media (max-width: 768px) {
+//         background-position: 0% top;
+//     }
+// }
+
+// .bg-welcome.austria {
+//     background: url(/images/countries/bg-austria.jpg);
+//     background-size: auto 100%;
+//     background-repeat: no-repeat;
+//     height: unset;
+//     min-height: 544px;
+//     background-position: 10% top;
+
+//     @media (max-width: 768px) {
+//         background-position: 0% top;
+//     }
+// }
 
 .h1-heading-v2{
 
@@ -294,8 +319,8 @@
     @media (min-width: 1400px) {
         padding-left: 15%;
     }
-    @media (min-width: 1400px) {
-        padding-left: 9%;
+    @media (min-width: 1650px) {
+        padding-left: 0%;
     }
     @media (max-width: 768px) {
         // max-width: 83%;
