--- a/views/order/registrationLanding.ejs
+++ b/views/order/registrationLanding.ejs
@@ -1,4 +1,4 @@
-<% if ( country.name == "Australia" || country.name == "Canada" ) { %>
+<% if ( newLayout ){ %>
 	<div class="container">
 		<h1 class="h1-heading-v2"><span>Trademark <br>Registration in <%= country.name %></span></h1>
 		<p class="reg-text-head">The ownership of a trademark is not automatically granted merely by using it. Generally speaking, only by going through the legal process of registration can you ensure rights to your trademark.</p>
