--- a/views/admin/country/edit.ejs
+++ b/views/admin/country/edit.ejs
@@ -28,6 +28,11 @@
             </div>
 
             <div class="form-group">
+                <label>Agency Short</label>
+                <input type="text" class="form-control" value="<%= country.agency_short %>" placeholder="" name="agency_short">
+            </div>
+
+            <div class="form-group">
                 <label>Opposition Period</label>
                 <input type="text" class="form-control" value="<%= country.opposition_period %>" placeholder="" name="opposition_period">
             </div>
