--- a/views/admin/country/edit.ejs
+++ b/views/admin/country/edit.ejs
@@ -42,6 +42,21 @@
                 <input type="text" class="form-control" value="<%= country.registration_period %>" placeholder="" name="registration_period">
             </div>
 
+            <!-- <div class="form-group">
+                <label>Country Flag</label>
+                <input type="file" class="form-control" value="<%= country.flag %>" placeholder="" name="flag">
+            </div> -->
+
+            <div class="form-group">
+                <label>Country Banner</label>
+                <input type="file" class="form-control" value="<%= country.banner %>" placeholder="" name="banner">
+            </div>
+
+            <div class="form-group">
+                <label>Country Logo</label>
+                <input type="file" class="form-control" value="<%= country.logo %>" placeholder="" name="logo">
+            </div>
+
             <div class="form-group">
                 <label>Status</label>
                 <select class="form-control" name="status">
