--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -69,7 +69,7 @@
 
 					<div class="col-md-3">
 						<a href="/trademark-registration-in-<%= continents[key].countries[ckey].name.replace(/\s/g, '_').toLowerCase() %>" >
-							<% if( continents[key].countries[ckey].avatar && continents[key].countries[ckey].avatar != "Test") { %><img src="images/<%= continents[key].countries[ckey].avatar %>"><% } %><%= continents[key].countries[ckey].name %>
+							<img src="images/<%= continents[key].countries[ckey].avatar %>"><%= continents[key].countries[ckey].name %>
 						</a>
 					</div>
 	
