--- a/views/order/registrationLanding.ejs
+++ b/views/order/registrationLanding.ejs
@@ -390,7 +390,7 @@
 
 				<p> Our Trademark Comprehensive Study will not only list similar trademarks {graphic/phonetic} that may conflict with yours, but also give you an Attorney's opinion about registration possibilities.</p>
 
-				<p> <b> This report is optional but highly recommeneded.</b> </p>
+				<p> <b> This report is optional but highly recommended.</b> </p>
 
 				<a class="btn-pull-right" href="/trademark-study-in-<%= country.name.replace(/\s/g, '_').toLowerCase() %>-proceed"><button class="btn btn-primary btn-black btn-rounded-primary"> Proceed</button></a>
 			</div>
