--- a/public/stylesheets/less/_old_content.less
+++ b/public/stylesheets/less/_old_content.less
@@ -831,7 +831,20 @@
     }
 }
 
+.flag-containerv2{
+    // border-radius: 139px;
+    overflow: hidden;
+    width: 130px;
+    height: 130px;
 
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 300px;
+
+    margin: auto;
+
+    box-shadow: 0px 0px 5px #d8d8d8;
+}
 
 .flag-container{
     border-radius: 139px;
