--- a/public/stylesheets/less/_old_content.less
+++ b/public/stylesheets/less/_old_content.less
@@ -839,7 +839,7 @@
 
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 300px;
+    background-size: contain;
 
     margin: auto;
 
