--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@ if ( typeof country != "undefined" ) {
 }
 %>
 <% if(countryBanner) { %>
-<div class="bg-welcome showBannerBg" style="background: url('/uploads/flag_banner/<%= countryBanner %>')"></div>
+<div class="bg-welcome showBannerBg" style="background-image: url('/uploads/flag_banner/<%= countryBanner %>')"></div>
 <% } else { %>
 <div class="bg-welcome"></div>
 <% } %>
