--- a/public/stylesheets/less/_content.less
+++ b/public/stylesheets/less/_content.less
@@ -330,6 +330,8 @@
     img.bottom{
         float: left;
         margin-left: -22%;
+        width: auto;
+        max-height: 160px;
     }
 
     // padding-left: 30%;
