--- a/public/stylesheets/less/_content.less
+++ b/public/stylesheets/less/_content.less
@@ -332,6 +332,7 @@
         margin-left: -22%;
         width: auto;
         max-height: 160px;
+        max-width: 300px;
     }
 
     // padding-left: 30%;
